Background white space fix? Maybe?

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -31,7 +31,7 @@ html {
     Slideshow Template was obtainted from the website below and modified according to our needs
     https://tympanus.net/codrops/2012/01/02/fullscreen-background-image-slideshow-with-css3/
 */
-/* .cb-slideshow,
+.cb-slideshow,
 .cb-slideshow:after { 
     position: fixed;
     width: 100%;
@@ -105,54 +105,4 @@ html {
 
 #back_text{
     color: transparent;
-} */
-
-.crossfade > figure {
-    animation: imageAnimation 30s linear infinite 0s;
-    backface-visibility: hidden;
-    background-size: cover;
-    background-position: center center;
-    color: transparent;
-    height: 100%;
-    left: 0px;
-    opacity: 0;
-    position: absolute;
-    top: 0px;
-    width: 100%;
-    z-index: -1;
-    transition-delay: initial;
-}
-
-.crossfade > figure:nth-child(1) { background-image: url('assets/Sky_Background.png'); }
-
-.crossfade > figure:nth-child(2) {
-  animation-delay: 10s;
-  background-image: url('assets/Runway_Background.png');
-}
-
-.crossfade > figure:nth-child(3) {
-  animation-delay: 20s;  
-  background-image: url('assets/Road_Background.png');
-  transition-delay: initial;  
-}
-
-@keyframes 
-imageAnimation {  0% {
- opacity: 0;
-}
- 8% {
- opacity: 1;
-}
- 17% {
- opacity: 1
-}
- 25% {
- opacity: 1
-}
-75% {
-    opacity: 1
-}
- 100% {
- opacity: 0
-}
 }
